@@ -2,6 +2,7 @@ dir = File.dirname(__FILE__)
 require File.expand_path("#{dir}/extensions/object")
 require File.expand_path("#{dir}/extensions/active_record/base")
 require File.expand_path("#{dir}/extensions/action_controller/base")
+require File.expand_path("#{dir}/extensions/action_controller/rescue")
 require File.expand_path("#{dir}/extensions/action_controller/test_response")
 require File.expand_path("#{dir}/extensions/action_view/base")
 require File.expand_path("#{dir}/extensions/kernel")
